Footer on template
Footer on template

--- a/3blocks.html
+++ b/3blocks.html
@@ -482,7 +482,7 @@
                                     <tr>
                                     <td style="background: #017b6c;" width="10"></td>
                                     <td style="font-weight: normal; font-family:arial, Helvetica, sans-serif; font-size:14px; padding-top:6;padding-bottom:6; text-align:center; background: #017b6c; color: #fff;font-size:14px;" valign="top">
-                                    FOOD</td>
+                                    Name Company</td>
                                     <td style="background: #017b6c;" width="10"></td>
                                     </tr>
                                     </tbody></table>
